# gnark-plonky2-verifier

./: .gitignore  README.md  benchmark.go  go.mod  go.sum
challenger/: challenger.go
cmd/: build.sh  main.go  types.go  utils.go  worker.go
ffi/: Cargo.toml  build.rs
ffi/src/: lib.rs
fri/: fri.go  fri_test.go  fri_utils.go  vars.go
goldilocks/: base.go  base_test.go  quadratic_extension.go  quadratic_extension_test.go  range_checker_utils.go  utils.go
plonk/: plonk.go  plonk_test.go
plonk/gates/: arithmetic_extension_gate.go  arithmetic_gate.go  base_sum_gate.go  constant_gate.go  coset_interpolation_gate.go  evaluate_gates.go  exponentiation_gate.go  gates.go  gates_test.go  multiplication_extension_gate.go  noop_gate.go  poseidon_gate.go  poseidon_mds_gate.go  public_input_gate.go  random_access_gate.go  reducing_extension_gate.go  reducing_gate.go  vars.go
poseidon/: bls12381.go  bls12381_test.go  bn254.go  bn254_test.go  goldilocks.go  goldilocks_constants.go  goldilocks_test.go  public_inputs_hash_test.go
prover/: Cargo.toml  rust-toolchain.toml
prover/src/: fr.rs  lib.rs  logger.rs  main.rs  parameters.rs  plonky2_config.rs  poseidon_bls12_381.rs  poseidon_bls12_381_constants.rs
testdata/: common_circuit_data.json  proof_with_public_inputs.json  verifier_only_circuit_data.json
trusted_setup/: trusted_setup.go
types/: common_data.go  deserialize.go  types.go
variables/: circuit.go  deserialize.go  deserialize_test.go  fri.go  plonk.go
verifier/: util.go  verifier.go  verifier_test.go
worker/: types.go  util.go  worker.go
