[package]
edition = "2021"
name    = "prover"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
ff = { package = "ff", version = "0.13", features = ["derive"] }
hex = "0.4.3"
itertools = "0.10.5"
lazy_static = "1.4.0"
num = { version = "0.4", features = ["rand"] }
num-derive = "0.3.3"
num-traits = "0.2.15"
plonky2 = { git = "https://github.com/mir-protocol/plonky2", version = "0.2.0", default-features = false, features = [
  "std",
  "gate_testing",
] }
plonky2x = { git = "https://github.com/succinctlabs/succinctx.git", tag = "v1.0.3" }
rand = "0.8"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
serde_with = { version = "2.2.0", features = ["hex"] }
starkyx = { git = "https://github.com/succinctlabs/starkyx.git" }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }

[features]
default = ["std"]
std     = ["anyhow/std", "rand/std"]

[profile.dev]
debug     = true
opt-level = 3

[profile.release]
debug     = true
opt-level = 3

[profile.bench]
opt-level = 3

[profile.test]
opt-level = 3
