[package]
edition = "2021"
name    = "gnark-plonky2-wrapper"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
ff = { package = "ff", version = "0.13", features = ["derive"] }
hex = "0.4.3"
itertools = "0.10.5"
lazy_static = "1.4.0"
num = { version = "0.4", features = ["rand"] }
num-derive = "0.3.3"
num-traits = "0.2.15"
plonky2 = { git = "https://github.com/QEDProtocol/plonky2-hwa", rev = "6a8ca008da97890b67a84f64784cfbc488b5238d" }
plonky2x = { git = "https://github.com/GopherJ/succinctx", rev = "502ae514676347c6ae7757dc23866558cb25dbf1" }
rand = "0.8"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
serde_with = { version = "2.2.0", features = ["hex"] }
starkyx = { git = "https://github.com/QEDProtocol/starkyx", rev = "a53ea1060c6256a8a26820e43fbe8d75233e8b29" }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
gnark-plonky2-verifier-ffi = { path = "../ffi" }

[features]
default = ["std"]
std     = ["anyhow/std", "rand/std"]

[profile.dev]
debug     = true
opt-level = 3

[profile.release]
debug     = true
opt-level = 3

[profile.bench]
opt-level = 3

[profile.test]
opt-level = 3

[patch.'https://github.com/0xPolygonZero/plonky2.git']
plonky2 = { git = "https://github.com/QEDProtocol/plonky2-hwa", rev = "6a8ca008da97890b67a84f64784cfbc488b5238d" }

[patch.'https://github.com/succinctlabs/starkyx.git']
starkyx = { git = "https://github.com/QEDProtocol/starkyx", rev = "a53ea1060c6256a8a26820e43fbe8d75233e8b29" }
